<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--3D image of NFL Logo courtesy of www.norebbo.com-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/nflcropped" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_margin"
                android:layout_marginRight="@dimen/right_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/heading_team_A"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/name_size" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bottom_margin"
                    android:layout_marginTop="@dimen/top_margin"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/score_team"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/score_size" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addTDForTeamA"
                    android:text="@string/button_td_6" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addConvForTeamA"
                    android:text="@string/button_conv_2" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addXtraForTeamA"
                    android:text="@string/button_xtra_pt_1" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addFgForTeamA"
                    android:text="@string/button_fg_3" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin"
                android:layout_marginRight="@dimen/right_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/heading_team_b"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/name_size" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bottom_margin"
                    android:layout_marginTop="@dimen/top_margin"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/score_team"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/score_size" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addTDForTeamB"
                    android:text="@string/button_td_6" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addConvForTeamB"
                    android:text="@string/button_conv_2" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addXtraForTeamB"
                    android:text="@string/button_xtra_pt_1" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addFgForTeamB"
                    android:text="@string/button_fg_3" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/reset_margin"
            android:onClick="resetScore"
            android:text="@string/button_reset" />

    </RelativeLayout>

</ScrollView>